<resources>
    <string name="app_name">practica permisos</string>
    <string name="tvTitulo">Gestion Permisos</string>
    <string name="tvCamera">Status Permission Camera</string>
    <string name="tvBT">Status Permission BT</string>
    <string name="tvEws">Status Permission External Storage</string>
    <string name="tvRS">Status Permission Read Storage</string>
    <string name="tvInternet">Status Permission Internet</string>
    <string name="tvContactos">Status Permission Contacts</string>
    <string name="tvDactilar">Status Permission fingerprint</string>
    <string name="btnRequestPermission">Request Permission</string>
    <string name="btnCheckPermission">Check Permission</string>
</resources>