<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tvDactilar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDactilar"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCamera"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvBT"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvEws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvEws"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRS"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvInternet"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvContactos"
        android:layout_marginBottom="80dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="117dp">

        <Button
            android:id="@+id/btnCheckPermission"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:text="@string/btnCheckPermission" />

        <Button
            android:id="@+id/btnRequestPermission"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="2dp"
            android:text="@string/btnRequestPermission" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:barrierDirection="left" />
</LinearLayout>